--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -8,7 +8,7 @@
   "app.nav.input.placeholder": "Поиск",
 
   "app.home.title1": "Недавно добавленные айтемы",
-  "app.home.title2": "Самые большие коллекции",
+  "app.home.title2": "Недавно добавленные коллекции",
   "app.home.title3": "Искать по тегам",
   "app.home.table.th1": "Коллекция",
   "app.home.table.th2": "Название",
